--- a/Site/public/css/ExerMente.css
+++ b/Site/public/css/ExerMente.css
@@ -1,16 +1,17 @@
 .container2{
     background-color: #eee;
-    margin: 100px;
-    margin-left: 500px;
-    margin-right: 500px;
-    height: 100vh;
     display: flex;
-    box-shadow:8px 9px 43px -21px rgba(0,0,0,0.7)
+    height: 120vh;
+    box-shadow:8px 9px 43px -21px rgba(0,0,0,0.7);
+    justify-content: center;
 }
 
 .folha{
+   justify-content: center;
+   width: 80%;
    height: 100%;
-   
+   display: flex;
+   flex-direction: column;
 }
 
 .container2 .folha .titulo{
@@ -27,10 +28,7 @@
 }
 .container2 .folha .texto{
     display: flex;
-    margin-left: 125px;
-    margin-right: 125px;
-    text-align: justify;
-    align-items: center;
+  
     height: 80%;
     font-size: 20px;
     
