--- a/Site/public/css/cadastroLogin.css
+++ b/Site/public/css/cadastroLogin.css
@@ -1,3 +1,4 @@
+
 *{
     padding: 0%;
     box-sizing: border-box;
@@ -26,12 +27,16 @@ header .containerHeader {
     display: flex;
     align-items: center;
 }
+header .containerHeader .logo{
+display: flex;
+width: 20%;
+}
 header .containerHeader h1 {
     color: black;
     font-weight: 400;
     justify-content: flex-start;
     margin-left: 10px;
-    width: 10%;
+    width: 100%;
     
 }
 
@@ -44,7 +49,7 @@ header .containerHeader .navbar{
 header .containerHeader .navbar .menu{
     display: flex;
     list-style: none;
-    width: 100%;
+    width: 80%;
     justify-content: center;
     align-items: center;
 }
@@ -58,8 +63,9 @@ header .containerHeader .navbar .menu li{
 header .containerHeader .navbar .button{
     display: flex;
     justify-content: flex-end;
-    align-items: flex-end;
+    align-items: center;
     margin-right: 10px;
+    width: 20%;
 }
 
 header .containerHeader .navbar .button .login, .cadastro{
@@ -92,7 +98,6 @@ header .containerHeader .navbar .button .login{
     background-color: #42baca;
     transition: 0.5s;
 }
-
 /* 
 Header
 --------------------
