--- a/Site/public/css/ExerMente.css
+++ b/Site/public/css/ExerMente.css
@@ -20,6 +20,10 @@ header {
     
     
 }
+a{
+    text-decoration: none;
+    color: #444848;
+}
 
 header .containerHeader {
     margin: 0 auto;
@@ -59,6 +63,10 @@ header .containerHeader .navbar .menu li{
     margin: 10px;
     list-style: none ;
     
+}
+.liStyle{
+    border-radius: 3px;
+    border-bottom: 2px solid black;
 }
 header .containerHeader .navbar .button{
     display: flex;
@@ -125,27 +133,26 @@ footer
 Blog
 */
 .container2{
-    background-color: #eee;
-    display: flex;
-    height: 120vh;
-    box-shadow:8px 9px 43px -21px rgba(0,0,0,0.7);
-    justify-content: center;
-    margin: 10% 10%;
+    margin: 10%;
+
 }
 
-.container2 .back .folha {
+.container2 .folha {
+    background-color: #eee;
     display: flex;
-   justify-content: center;
-   align-items: center;
-   flex-direction: column;  
-   width: 100%;
-   height: 120%;
-   text-align: justify;
-   padding: 0 10%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;  
+    width: 100%;
+    text-align: justify;
+    padding: 0 10%;
+    margin-bottom: 10%;
+    box-shadow:8px 9px 43px -21px rgba(0,0,0,0.7);
+    justify-content: center;
 }
 
 .container2 .folha .titulo{
-    margin-top: 30px;
+    margin-top: 60px;
     text-align: center;
     justify-content: center;
     display: flex;
@@ -155,13 +162,15 @@ Blog
 .container2 .folha .titulo h1{
     display: flex;
     justify-content: center;
+    margin-bottom: 20px;
 }
 .container2 .folha .texto{
     display: flex;
     text-align: justify;
-    height: 80%;
     font-size: 20px;
     justify-content: center;
+    flex-direction: column;
     margin: 0 10%;
-    margin-top: 20px;
+    padding-bottom: 50px;
+
 }
