--- a/Site/public/css/Index.css
+++ b/Site/public/css/Index.css
@@ -20,6 +20,10 @@ header {
     
     
 }
+a{
+    text-decoration: none;
+    color: #444848;
+}
 
 header .containerHeader {
     margin: 0 auto;
@@ -58,7 +62,10 @@ header .containerHeader .navbar .menu li{
     display: inline-block;
     margin: 10px;
     list-style: none ;
-    
+}
+.liStyle{
+    border-radius: 3px;
+    border-bottom: 2px solid black;
 }
 header .containerHeader .navbar .button{
     display: flex;
@@ -72,7 +79,7 @@ header .containerHeader .navbar .button .login, .cadastro{
     width: 5vw;
     height: 4vh;
     border-radius: 10px;
-    border: 2px solid #5acbda;
+    border-bottom: 2px solid #5acbda;
 }
 
 
@@ -129,6 +136,7 @@ Banner */
 /* 
 --------------------
 Blog */
+
 .areaBlog{
     padding: 50px;
     background-color: #eee;
@@ -140,6 +148,9 @@ Blog */
     align-items: center;
 }
 
+.artigos li:hover{
+    border: 1px solid #5acbda;
+}
 .artigos {
     padding: 30px 0;
     display: flex;
@@ -155,42 +166,7 @@ Blog */
 
 
 /* 
---------------------
-Rede social */
-
-.social {
-    margin: 50px 0;
-}
-
-.valores{
-    display: flex;
-    justify-content: center;
-}
-.social .caixas, .caixa {
-    display: flex;
-}
-
-.caixa {
-    flex-direction: column;
-    align-items: center;
-    margin: 0 15px;
-}
-
-.caixa h4 {
-    margin: 15px 0;
-    color: #e6005a;
-}
-
-.caixa p {
-    text-align: center;
-    color: #000000; 
-    /* color: black; */
-}
-
-.caixa img {
-    width: 170px;
-}
-/* 
+Blog 
 --------------------
 Rodapé */
 
