--- a/Site/public/css/login.css
+++ b/Site/public/css/login.css
@@ -20,6 +20,10 @@ header {
     
     
 }
+a{
+    text-decoration: none;
+    color: #444848;
+}
 
 header .containerHeader {
     margin: 0 auto;
@@ -29,20 +33,20 @@ header .containerHeader {
 }
 header .containerHeader .logo{
 display: flex;
-width: 20%;
+
 }
 header .containerHeader h1 {
     color: black;
     font-weight: 400;
-    
+    font-size: 30px;
     margin-left: 10px;
-    width: 20%;
+    
     
 }
 
 header .containerHeader .navbar{
     display: flex;
-    width: 100%;
+    width: 90%;
     justify-content: center;
     
 }
@@ -59,6 +63,10 @@ header .containerHeader .navbar .menu li{
     margin: 10px;
     list-style: none ;
     
+}
+.liStyle{
+    border-radius: 3px;
+    border-bottom: 2px solid black;
 }
 header .containerHeader .navbar .button{
     display: flex;
