--- a/Site/public/css/ExerMente.css
+++ b/Site/public/css/ExerMente.css
@@ -17,7 +17,8 @@ header {
     border-bottom: 1px solid black;
     background-color: white;
     display: flex;
-    
+    background: rgb(238,238,238);
+background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
     
 }
 a{
@@ -114,8 +115,8 @@ footer
 
 .footer {
     padding: 45px 0;
-    background-color: #b7bcbc;
-    border-top: 1px solid black;
+    background: rgb(238,238,238);
+background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
 }
 
 .footer .container {
@@ -132,13 +133,16 @@ footer
 --------------------
 Blog
 */
+body{
+    background: rgb(238,238,238);
+    background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
+}
 .container2{
     margin: 10%;
-
 }
 
 .container2 .folha {
-    background-color: #eee;
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
