--- a/Site/public/css/Index.css
+++ b/Site/public/css/Index.css
@@ -15,7 +15,8 @@ Inicio do Header*/
 header {
     padding: 10px 0;
     border-bottom: 1px solid black;
-    background-color: white;
+    background: rgb(238,238,238);
+background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);   
     display: flex;
     
     
@@ -117,7 +118,7 @@ Banner */
 }
 
 .banner .container {
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(6px);
     height: 100%;
     display: flex;
     align-items: center;
@@ -139,7 +140,8 @@ Blog */
 
 .areaBlog{
     padding: 50px;
-    background-color: #eee;
+    background: rgb(238,238,238);
+background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
 }
 
 .areaBlog .blog{
@@ -173,7 +175,8 @@ Rodapé */
 
 .footer {
     padding: 45px 0;
-    background-color: #b7bcbc;
+    background: rgb(238,238,238);
+background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
 }
 
 .footer .container {
