--- a/Site/public/css/cadastroLogin.css
+++ b/Site/public/css/cadastroLogin.css
@@ -18,7 +18,8 @@ header {
     border-bottom: 1px solid black;
     background-color: white;
     display: flex;
-    
+    background: rgb(238,238,238);
+    background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
     
 }
 a{
@@ -113,8 +114,8 @@ Header
 footer 
 */.footer {
     padding: 45px 0;
-    background-color: #b7bcbc;
-    border-top: 1px solid black;
+    background: rgb(238,238,238);
+    background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
 }
 
 .footer .container {
@@ -136,7 +137,8 @@ Cadastro
     align-items: center;
     width: 100%;
     height: 110vh;
-    background-color: #b7bcbc;
+    background: rgb(238,238,238);
+    background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
 }
 .fundo .container{
     -webkit-box-shadow: -5px -1px 40px -19px rgba(0,0,0,0.75);
@@ -147,7 +149,7 @@ Cadastro
     height: 80%;
     align-items: center;
     justify-content: center;
-    border: 0.25px solid black;
+    
    
 
 }
@@ -155,9 +157,9 @@ Cadastro
     display: flex;
     align-items: center;
     flex-direction: column;
-    color: white;
+    color: black;
     justify-content: center;
-    background-color: #444848;
+    background-color: #eee;
     height: 100%;
     width: 50%;
     
