--- a/Site/public/css/login.css
+++ b/Site/public/css/login.css
@@ -16,9 +16,9 @@ header {
     padding: 10px 0;
     border-bottom: 1px solid black;
     background-color: white;
+    background: rgb(238,238,238);
+    background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
     display: flex;
-    
-    
 }
 a{
     text-decoration: none;
@@ -112,8 +112,8 @@ Header
 footer 
 */.footer {
     padding: 45px 0;
-    background-color: #b7bcbc;
-    border-top: 1px solid black;
+    background: rgb(238,238,238);
+    background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
 }
 
 .footer .container {
@@ -136,7 +136,9 @@ Cadastro
     align-items: center;
     width: 100%;
     height: 110vh;
-    background-color: #b7bcbc;
+    background: rgb(238,238,238);
+    background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
+    
 }
 .fundo .container{
     -webkit-box-shadow: -5px -1px 40px -19px rgba(0,0,0,0.75);
@@ -147,7 +149,7 @@ Cadastro
     height: 80%;
     align-items: center;
     justify-content: center;
-    border: 0.25px solid black;
+    /* border: 0.25px solid black; */
    
 
 }
@@ -155,11 +157,11 @@ Cadastro
     display: flex;
     align-items: center;
     flex-direction: column;
-    color: white;
+    color: black;
     justify-content: center;
-    background-color: #444848;
     height: 100%;
     width: 50%;
+    background-color: #eee;
     
 }
 .fundo .container .caixa-formularioEsquerda .maromba{
