Parametrizando o site com a Web-data-viz

--- a/Site/public/css/ExerMente.css
+++ b/Site/public/css/ExerMente.css
@@ -57,6 +57,7 @@ header .containerHeader .navbar .menu{
     width: 100%;
     justify-content: center;
     align-items: center;
+    margin-left: 10%;
 }
 
 header .containerHeader .navbar .menu li{
@@ -74,14 +75,14 @@ header .containerHeader .navbar .button{
     justify-content: flex-end;
     align-items: center;
     margin-right: 10px;
-    
+    width: 20%;
 }
 
 header .containerHeader .navbar .button .login, .cadastro{
     width: 5vw;
     height: 4vh;
     border-radius: 10px;
-    border: 2px solid #5acbda;
+    border-bottom: 2px solid #5acbda;
 }
 
 
