--- a/Site/public/Dashboard/dashboards.css
+++ b/Site/public/Dashboard/dashboards.css
@@ -249,3 +249,128 @@ body {
   margin: 5px;
   border-radius: 3px;
 }
+/* resetar css
+
+------------------------ 
+
+Inicio do Header*/
+
+header {
+  padding: 10px 0;
+  border-bottom: 1px solid black;
+  background-color: white;
+  display: flex;
+  background: rgb(238,238,238);
+  background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
+  
+}
+a{
+  text-decoration: none;
+  color: #444848;
+}
+
+header .containerHeader {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+header .containerHeader .logo{
+display: flex;
+
+}
+header .containerHeader h1 {
+  color: black;
+  font-weight: 400;
+  font-size: 30px;
+  margin-left: 10px;
+  
+  
+}
+
+header .containerHeader .navbar{
+  display: flex;
+  width: 90%;
+  justify-content: center;
+  
+}
+header .containerHeader .navbar .menu{
+  display: flex;
+  list-style: none;
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10%;
+}
+
+header .containerHeader .navbar .menu li{
+  display: inline-block;
+  margin: 10px;
+  list-style: none ;
+  
+}
+.liStyle{
+  border-radius: 3px;
+  border-bottom: 2px solid black;
+}
+header .containerHeader .navbar .button{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-right: 10px;
+  width: 20%;
+}
+
+header .containerHeader .navbar .button .login, .cadastro{
+  width: 5vw;
+  height: 4vh;
+  border-radius: 10px;
+  border-bottom: 2px solid #5acbda;
+}
+
+
+header .containerHeader .navbar .button .login{
+  background-color:#fff;
+  transition: 0.5s;
+  margin-right: 15px;
+}
+
+.login:hover{
+  background-color:rgb(238, 238, 238);
+  transition: 0.5s;
+  cursor:pointer;
+}
+
+.cadastro{
+  color: black;
+  background-color: white;
+  cursor:pointer;
+  transition: 0.5s;
+}
+.cadastro:hover{
+  background-color: #42baca;
+  transition: 0.5s;
+}
+/* 
+Header
+--------------------
+footer 
+*/.footer {
+  padding: 45px 0;
+  background: rgb(238,238,238);
+  background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
+}
+
+.footer .container {
+  display: flex;
+  justify-content: center;
+}
+
+.footer p {
+  color:black;
+}
+/*
+footer 
+--------------------
+Cadastro
+*/
