--- a/Site/public/css/Index.css
+++ b/Site/public/css/Index.css
@@ -110,10 +110,18 @@ header .containerHeader .navbar .button .login{
 /* 
 --------------------
 Banner */
-.banner {
+.containerBanner{
+    display: flex;
+    background: rgb(238,238,238);
+    background: linear-gradient(90deg, rgba(238,238,238,1) 5%, rgba(201,250,250,1) 50%, rgba(231,238,239,1) 95%);
+}
+.containerBanner .banner {
+    margin: 5%;
+    border-radius: 10px;
     background-image: url("../assets/Img/Academia.jpg");
     background-size: 100%;
     background-color: #eee;
+    width: 100%;
     height: 90vh;
     
 }
