--- a/Site/public/Dashboard/imc.css
+++ b/Site/public/Dashboard/imc.css
@@ -151,6 +151,7 @@ Cadastro
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100%;
     height: 110vh;
     background: rgb(238,238,238);
@@ -252,4 +253,21 @@ Cadastro
 #div_pdf a{
     font-size: 30px;
     color: blue;
+}
+
+.fundo .containerAvg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    height: 30%;
+    background-color: rgb(80, 221, 80);
+    margin-top: 5%;
+    border-radius: 20px;
+}
+#div_avgImc b{
+    font-size: 20px;
+}
+#media{
+    font-size: xx-large;
 }
