--- a/Site/public/css/eu.css
+++ b/Site/public/css/eu.css
@@ -8,10 +8,10 @@ html {
     width: 100%;
     height: 90vh;
 }
-.img-js {
+.imagem-js {
     display: none;
 }
-.ativo {
+.mudar {
     display: block !important;
     animation-name: opacity;
     animation-duration: 1s;
@@ -24,7 +24,7 @@ html {
         opacity: 100%;
     }
 }
-.js-scroll.animate #t200 {
+.js-scroll.animate #tr {
     transition: 0.8s;
     transition-delay: 0.2s;
 }
